--- a/parazyler/package.json
+++ b/parazyler/package.json
@@ -8,8 +8,10 @@
     "build": "NODE_ENV=production react-router build"
   },
   "dependencies": {
+    "@fastify/multipart": "^8.3.1",
     "@gadget-client/parazyler": "link:.gadget/client",
     "@gadgetinc/react": "github:gadget-inc/js-clients#@gadgetinc/react-v0.19.2-alpha.1-gitpkg-929bcaaa",
+    "@huggingface/inference": "^3.5.2",
     "@mdxeditor/editor": "^3.8.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -34,14 +36,18 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "fastify-multipart": "^5.4.0",
+    "formidable": "^3.5.2",
     "gadget-server": "link:.gadget/server",
     "isbot": "^5.1.0",
     "lucide-react": "^0.471.1",
+    "multer": "^1.4.5-lts.1",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-day-picker": "9.5.1",
     "react-dom": "^18.2.0",
     "react-router": "^7.0.2",
+    "react-router-dom": "^7.3.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.17",
@@ -49,6 +55,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
